# QtLabs

./: README.md
Lab-1/: main.cpp
Lab-2/: Ticket.cpp  Ticket.h  main.cpp
Lab-3-4/: mainwindow.cpp  mainwindow.h  ticket.h
Lab-5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  ticket.cpp
Lab-6/: CMakeLists.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  ticket.cpp  ticket.h
Lab1/: Student.cpp  Student.h  main.cpp
